# prom-prog-homework

./: LICENSE  README.md
bash/hw1/: README.md  du-sh.sh  find_dir_size.awk
bash/hw3/: run.sh
bash/hw7/: run.sh
build-systems/hw1/: CMakeLists.txt  README.md
build-systems/hw1/A/: preparing.py
build-systems/hw1/B/: CMakeLists.txt  lib.cpp  lib.h
build-systems/hw1/C/: C.cpp  C.h  main.cpp  test.cpp
build-systems/hw2/: Dockerfile
build-systems/hw3/: CMakeLists.txt  Dockerfile
build-systems/hw4/: CMakeLists.txt  README.md  check.sh
build-systems/hw4/src/: Map.h  main.cpp  main_with_code_generation.cpp  main_without_code_generation.cpp  map_generator.py  map_image.cpp  map_image.h  map_with_code_generation.cpp  map_with_code_generation.template  map_without_code_generation.cpp  map_without_code_generation.h
build-systems/hw4/without_code_generation/: CMakeLists.txt  main.cpp
git/hw5/: pre-commit
git/hw6/: post-checkout
testing/hw1/task4/: .gitignore  README.md
testing/hw1/task4/tests/01-simple-library/: AddTestCase.cpp  CMakeLists.txt  GetMonthDaysTest.cpp  GetMonthDaysTest.h  LeapTestCase.cpp
testing/hw1/task4/tests/02-tree/: TreeTestCase.cpp
testing/hw1/task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
